Add dynamic routings and update add/edit form

--- a/site_verify.routing.yml
+++ b/site_verify.routing.yml
@@ -10,18 +10,30 @@ site_verify.verifications_list:
 site_verify.verification_add:
   path: '/admin/config/search/verifications/add'
   defaults:
-    _form: '\Drupal\site_verify\Form\SiteVerifyEditForm'
+    _form: '\Drupal\site_verify\Form\SiteVerifyAdminForm'
     _title: 'Add verification'
   requirements:
     _permission: 'administer site configuration'
 
-site_verify.verification_add:
-  path: '/admin/config/search/verifications/add/{site_verify_engine}'
+site_verify.verification_edit:
+  path: '/admin/config/search/verifications/{site_verify}/edit'
   defaults:
-    _form: '\Drupal\site_verify\Form\SiteVerifyEditForm'
-    _title: 'Add verification'
+    _form: '\Drupal\site_verify\Form\SiteVerifyAdminForm'
+    _title: 'Edit verification'
   requirements:
     _permission: 'administer site configuration'
+
+site_verify.verification_add_engine:
+  path: '/admin/config/search/verifications/add/{site_verify_engine}'
+  defaults:
+    _form: '\Drupal\site_verify\Form\SiteVerifyAdminForm'
+    _title: 'Add'
+  requirements:
+    _permission: 'administer site configuration'
+
+# Dynamic routes
+route_callbacks:
+  - '\Drupal\site_verify\Routing\SiteVerifyRoutes::routes'
 
 # /**
 #  * Implements hook_menu().
